<resources>
    <string name="app_name">Bharathi</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="raise_a_complaint">Raise a Complaint</string>
    <string name="faqs">FAQs</string>
    <string name="user_name">User Name</string>
    <string name="home">Home</string>
    <string name="review_cart">Review Cart</string>
    <string name="my_profile">My Profile</string>
    <string name="notification">Notification</string>
    <string name="log_in">Log In</string>
    <string name="dummt_strind_product">An apple is an edible fruit produced by an apple tree (Malus domestica). Apple trees are cultivated worldwide and are the most widely grown species in the genus Malus. The tree originated in Central Asia, where its wild ancestor, Malus sieversii, is still found today.</string>
    <string name="add">Add</string>
    <string name="move_from_wish_list">Remove From \n WishList</string>


    <string name="map_key" translatable="true">AIzaSyAVpTgrf6qi1n92PDrfcZ46mQQ_JMxFt88</string>
<!--
    <string name="currency">$</string>
-->
    <string name="currency">\u20B9</string>

    <string name="contactno">+919848145542</string>
    <string name="supportemail">support@bharatimilkfoods.com</string>
    <string name="login">login</string>
    <string name="_10_digit_mobile_number">10 digit mobile number</string>
    <string name="enter_mobile_number">enter mobile number</string>
    <string name="login_caps">LOGIN</string>
    <string name="enter_your_phone_number_to_proceed">Enter your phone number to proceed</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_agree_to_terms_and_conditions_amp_privacy_policy"><![CDATA[I agree to Terms and Conditions & Privacy policy .]]></string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_your_details_for_sign_up">Enter your details for sign up</string>
    <string name="sign_up_caps">SIGN UP</string>
    <string name="resend_otp">Resend OTP</string>

    <string name="please_type_the_verification_code_sent_to_n_9xxxxxxx19">Please type the verification code sent to\n+9XXXXXXX19</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="todo">TODO</string>
    <string name="address">WARD NO.15, D.No.9-17-1/3, BHARATI MILK FOODS, CBM COMPOUND, RAMATALKIES ROAD, Visakhapatnam, Andhra Pradesh, 530003</string>
</resources>