<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SignUpActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/placeholder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/verification_code"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/please_type_the_verification_code_sent_to_n_9xxxxxxx19"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            />

        <!-- <com.chaos.view.PinView
             style="@style/PinWidget.PinView"
             android:id="@+id/pinView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:padding="10dp"
             android:textColor="@color/colorAccent"
             app:hideLineWhenFilled="true"
             app:itemCount="6"
             app:viewType="rectangle"/>-->

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:height="40dp"
            app:width="40dp"
            app:bar_enabled="true"
            app:bar_height="2dp"
            app:length="6"
            android:layout_marginTop="10dp"
            app:otp_text_size="24dp"/>

        <Button
            android:id="@+id/verify_btn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_yellowbtn"
            android:text="Verify"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="18sp"
            tools:ignore="MissingPrefix"
            />

        <TextView
            android:id="@+id/txtresend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/resend_otp"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            tools:ignore="MissingPrefix"
            />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>
</layout>